--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "publisher": "Ansvia",
     "repository": "https://github.com/anvie/ansvia-vscode",
     "license": "SEE LICENSE IN LICENSE",
-    "version": "0.2.13",
+    "version": "0.2.14",
     "engines": {
         "vscode": "^1.36.0",
         "node": ">=6.0.0"
@@ -14,7 +14,8 @@
         "Other"
     ],
     "activationEvents": [
-        "workspaceContains:**/ansvia-vscode.yaml"
+        "onLanguage:dart",
+        "onLanguage:rust"
     ],
     "main": "./out/extension.js",
     "contributes": {
