Added more snippets, included sql snippet.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
             {
                 "language": "dart",
                 "path": "./dart_snippets.json"
+            },
+            {
+                "language": "sql",
+                "path": "./sql_snippets.json"
             }
         ]
     },
