fix error extension.server not found

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "activationEvents": [
         "onLanguage:dart",
         "onLanguage:rust",
-        "onLanguage:sql"
+        "onLanguage:sql",
+        "onCommand:extension.server"
     ],
     "main": "./out/extension.js",
     "contributes": {
