--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "publisher": "Ansvia",
     "repository": "https://github.com/anvie/ansvia-vscode",
     "license": "SEE LICENSE IN LICENSE",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "engines": {
         "vscode": "^1.36.0",
         "node": ">=6.0.0"
@@ -42,7 +42,7 @@
         "snippets": [
             {
                 "language": "rust",
-                "path": "./rust_snippets.json"
+                "path": "./snippets/rust_snippets.json"
             },
             {
                 "language": "dart",
